# ruche

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  all_query.sql  broken_gg.service  docker-compose.yml  leptos_broken_gg.service  package-lock.json  rebuild.sh  ruche.service  tailwind.config.js
.cargo/: config.toml
.release-cargo/: config.toml
asset-generation/: Cargo.toml
asset-generation/src/: lib.rs  main.rs
broken-gg/: Cargo.toml  package.json  tailwind.config.js
broken-gg/migrations/: 20241022172000_init_down.sql  20241022172001_init_up.sql
broken-gg/public/: .gitignore  robots.txt
broken-gg/public/assets/: .gitignore
broken-gg/src/: app.rs  main.rs  utils.rs  views.rs
broken-gg/src/backend/: task_director.rs  tasks.rs
broken-gg/src/views/: components.rs  platform_type_page.rs  summoner_page.rs
broken-gg/style/: .gitignore  tailwind.css
common/: Cargo.toml
common/src/: consts.rs  lib.rs
common/src/consts/: champion.rs  game_mode.rs  item.rs  map.rs  perk.rs  platform_route.rs  profile_icon.rs  queue.rs  summoner_spell.rs
docs/: ASSET-PIPELINE.md  INSTALLATION.md  RUCHE.md  TECHNICAL-HIGHLIGHT.md
migrations/: 20241022172000_init_down.sql  20241022172001_init_up.sql  20241022172002_add_lol_matches_index.sql
public/: robots.txt
public/assets/champions/: 1.avif  10.avif  101.avif  102.avif  103.avif  104.avif  105.avif  106.avif  107.avif  11.avif  110.avif  111.avif  112.avif  113.avif  114.avif  115.avif  117.avif  119.avif  12.avif  120.avif  121.avif  122.avif  126.avif  127.avif  13.avif  131.avif  133.avif  134.avif  136.avif  14.avif  141.avif  142.avif  143.avif  145.avif  147.avif  15.avif  150.avif  154.avif  157.avif  16.avif  (+129 more)
public/assets/items/: 1001.avif  1004.avif  1006.avif  1018.avif  1026.avif  1027.avif  1028.avif  1029.avif  1033.avif  1035.avif  1036.avif  1037.avif  1038.avif  1039.avif  1040.avif  1042.avif  1052.avif  1054.avif  1055.avif  1056.avif  1058.avif  1082.avif  1083.avif  1101.avif  1104.avif  1105.avif  1106.avif  1500.avif  1503.avif  1506.avif  1508.avif  1509.avif  1510.avif  1511.avif  1512.avif  1516.avif  1520.avif  1521.avif  1522.avif  2003.avif  (+368 more)
public/assets/perks/: 5001.avif  5002.avif  5003.avif  5005.avif  5007.avif  5008.avif  5010.avif  5011.avif  5012.avif  5013.avif  7000.avif  8000.avif  8005.avif  8008.avif  8009.avif  8010.avif  8014.avif  8017.avif  8021.avif  8100.avif  8105.avif  8106.avif  8112.avif  8120.avif  8124.avif  8126.avif  8128.avif  8134.avif  8135.avif  8136.avif  8138.avif  8139.avif  8143.avif  8200.avif  8208.avif  8210.avif  8214.avif  8224.avif  8226.avif  8229.avif  (+45 more)
public/assets/profile_icons/: 0.avif  1.avif  10.avif  1000.avif  1001.avif  1002.avif  1003.avif  1004.avif  1005.avif  1006.avif  1007.avif  1008.avif  1009.avif  1010.avif  1011.avif  1012.avif  1013.avif  1014.avif  1015.avif  1016.avif  1017.avif  1018.avif  1019.avif  1020.avif  1021.avif  1022.avif  1023.avif  1024.avif  1025.avif  1026.avif  1027.avif  1028.avif  1029.avif  1030.avif  1031.avif  1032.avif  1033.avif  1034.avif  1035.avif  1036.avif  (+4525 more)
public/assets/summoner_spells/: 1.avif  11.avif  12.avif  13.avif  14.avif  21.avif  2201.avif  3.avif  30.avif  31.avif  32.avif  4.avif  54.avif  55.avif  6.avif  7.avif
ruche/: .gitignore  Cargo.toml  input.css  package.json  tailwind.config.js
ruche/migrations/: 20241022172002_update_pro_player_len.sql  20241022172003_change_summoner_index.sql
ruche/public/: robots.txt
ruche/src/: app.rs  backend.rs  lib.rs  main.rs  serve.rs  sse.rs  utils.rs  views.rs
ruche/src/backend/: live_game_cache.rs  server_fns.rs  task_director.rs  tasks.rs
ruche/src/backend/server_fns/: get_champions.rs  get_encounter.rs  get_encounters.rs  get_live_game.rs  get_match_details.rs  get_matches.rs  get_summoner.rs  search_summoner.rs  update_summoner.rs
ruche/src/backend/server_fns/get_match_details/: update_match_timeline.rs
ruche/src/backend/tasks/: daily_sql_clean.rs  generate_sitemap.rs  handle_live_game_cache.rs  sse_broadcast_match_updated_cleanup.rs  update_matches.rs  update_pro_players.rs
ruche/src/backend/tasks/update_matches/: bulk_lol_match_participants.rs  bulk_lol_matches.rs  bulk_summoners.rs
ruche/src/views/: components.rs  platform_type_page.rs  summoner_page.rs  summoner_search_page.rs
ruche/src/views/components/: match_details.rs  match_filters.rs  pagination.rs  summoner_nav.rs
ruche/src/views/components/match_details/: match_details_build.rs  match_details_overview.rs  match_details_team.rs
ruche/src/views/summoner_page/: match_details.rs  summoner_champions_page.rs  summoner_encounter_page.rs  summoner_encounters_page.rs  summoner_live_page.rs  summoner_matches_page.rs  summoner_nav.rs  summoner_search_page.rs
ruche/src/views/summoner_page/match_details/: match_details_build.rs  match_details_overview.rs  match_details_team.rs
ruche/style/: tailwind.css
src/: apis.rs  app.rs  backend.rs  components.rs  consts.rs  error_template.rs  lib.rs  live_game_cache.rs  lol_static.rs  main.rs  models.rs  riven_fix.rs  utils.rs  views.rs
src/backend/: generate_sitemap.rs  live_game_cache.rs  lol_static.rs  server_fns.rs  task_director.rs  updates.rs
src/backend/server_fns/: get_champions.rs  get_encounter.rs  get_encounters.rs  get_live_game.rs  get_match_details.rs  get_matches.rs  get_summoner.rs  search_summoner.rs  update_summoner.rs
src/components/: match_details.rs  match_filters.rs  pagination.rs  platform_type_page.rs  summoner_champions_page.rs  summoner_encounters_page.rs  summoner_live_page.rs  summoner_matches_page.rs  summoner_page.rs  summoner_search_page.rs
src/consts/: champion.rs  game_mode.rs  item.rs  map.rs  perk.rs  platform_route.rs  profile_icon.rs  queue.rs  summoner_spell.rs
src/models/: db.rs  entities.rs  traits.rs  types.rs  update.rs
src/views/: components.rs  platform_type_page.rs  summoner_page.rs
static-asset-generation/: Cargo.toml
static-asset-generation/src/: lib.rs  main.rs
static-asset-generation/tmp/: .gitignore
style/: tailwind.css
(+63 files in other folders)
