cargo-features = ["profile-rustflags"]
[workspace]
members = ["common", "asset-generation", "ruche"]
resolver = "2"


[workspace.dependencies]
riven = {version = "2.68.0"}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror = "2"
futures = "0.3.31"
clap= { version = "4", features = ["derive"] }


[profile.release]
panic = "abort"
lto = true
codegen-units = 1
rustflags = ["--cfg", "erase_components"]


[profile.wasm-release]
inherits = "release"
opt-level = 3
lto = 'fat'
codegen-units = 1
panic = "abort"
rustflags = ["-Ctarget-cpu=native", "--cfg", "erase_components"]