cargo-features = ["profile-rustflags"]
[workspace]
members = ["common", "asset-generation", "ruche"]
resolver = "2"


[workspace.dependencies]
riven = {git="https://github.com/gqsnt/Riven", rev="78e2300b6966c6dca293292d820e1d165a009ead"}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.143"
tokio = { version = "1.47.1" }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
thiserror = "2.0.17"
futures = "0.3.31"
clap= { version = "4", features = ["derive"] }
strum = {version = "0.27.2", features = ["derive"]}
bitcode = "0.6.7"
num_enum = "0.7.5"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
rustflags = ["-Ctarget-cpu=native"]


[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
rustflags = [ "-Zunstable-options",  "-Zfmt-debug=none"]


