[package]
name = "asset-generation"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = {workspace = true}
image = "0.25"
reqwest = {workspace = true}
tokio={workspace = true, features = ["rt-multi-thread", "macros", "fs"]}
serde = {workspace = true}
ravif =  "0.12.0"
rgb =  "0.8.50"
riven={workspace = true}
common = { path = "../common" }
serde_json = {workspace = true}
thiserror = {workspace = true}
clap = { version = "4.5.21", features = ["derive"] }